created react ui

--- a/src/component/Card/Card.css
+++ b/src/component/Card/Card.css
@@ -7,6 +7,7 @@
     margin: 20px;
     background-color: white;align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
 
 .card-container:hover{
@@ -34,5 +35,7 @@
 .card-main-container{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     
 }
