--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -5,6 +5,7 @@
 .info-main-container-1{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background-color: #171d2f;
     color: white;
     margin: 0;
@@ -24,6 +25,7 @@
 
 .info-img{
     margin: 20px;
+    width: 500px;
 }
 
 .info-main-container-2{
@@ -38,13 +40,24 @@
 
 
 @media screen and (max-width:600px) {
-    .info-main-container-1{
+    /* .info-main-container-1{
         flex-direction: column;
         align-items: center;
+    } */
+
+    .info-main-container-1{
+        flex-direction: column;
     }
 
     .info-main-container-2{
         flex-direction: column;
         align-items: center;
     }
+
+    .info-img{
+        width: 90%;
+    
+    }
+
+   
 }
