added media query

--- a/src/component/Card/Card.css
+++ b/src/component/Card/Card.css
@@ -39,3 +39,11 @@
     justify-content: center;
     
 }
+
+@media screen and (max-width:600px) {
+    .card-container{
+        width: 60%;
+    }
+}
+
+
